// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormGroup /> renders properly with default props 1`] = `
<div
  className="formgroup "
>
  <label
    className="formgroup__label "
    htmlFor="testname"
  >
    Test label
  </label>
  <span>
    test child
  </span>
</div>
`;

exports[`<FormGroup /> renders properly with error 1`] = `
<div
  className="formgroup "
>
  <label
    className="formgroup__label "
    htmlFor="testname"
  >
    Test label
  </label>
  <span>
    test child
  </span>
  <div
    className="formgroup__error"
  >
    test error
  </div>
</div>
`;

exports[`<FormGroup /> renders properly with groupClasses 1`] = `
<div
  className="formgroup testgroupclass"
>
  <label
    className="formgroup__label "
    htmlFor="testname"
  >
    Test label
  </label>
  <span>
    test child
  </span>
</div>
`;

exports[`<FormGroup /> renders properly with labelClasses 1`] = `
<div
  className="formgroup "
>
  <label
    className="formgroup__label testlabelclass"
    htmlFor="testname"
  >
    Test label
  </label>
  <span>
    test child
  </span>
</div>
`;
